# Splendor

./: .gitignore  README.md  SplendorDesktop.spec  packaging_launcher.py  pyproject.toml
scripts/: build_macos.sh  build_windows.ps1
splendor_app/: __init__.py  assets.py  constants.py  data.py  game_logic.py  main.py  model.py  network.py  ui.py
splendor_core/: __init__.py  assets.py  constants.py  data.py  game_logic.py  model.py
splendor_web/: __init__.py  app.py  rooms.py
tests/: test_rules.py  test_web_backend.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  api.ts  assets.test.ts  assets.ts  gameUi.ts  main.tsx  styles.css  types.ts
web/src/components/: GameBoard.test.tsx  GameBoard.tsx
