[project]
name = "splendor-desktop"
version = "0.1.0"
description = "Splendor prototype with desktop and hosted web play."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.7",
]
web = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
splendor-desktop = "splendor_app.main:main"
splendor-web-api = "splendor_web.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["splendor_app*", "splendor_core*", "splendor_web*"]

[tool.setuptools.package-data]
splendor_app = ["assets/**/*.json", "assets/**/*.png"]
